updated site for quiz content

--- a/download.html
+++ b/download.html
@@ -36,7 +36,7 @@
       <div class="container">
         <ul class="navbar-list">
           <li class="navbar-item"><a class="navbar-link" href="index.html">Home</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Online Quiz</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Astronomy Quiz</a></li>
           <li class="navbar-item current"><a class="navbar-link" href="download.html">Download</a></li>
           <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
           <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact Us</a></li>
@@ -53,7 +53,7 @@
           Information
         </td>
         <td>
-          <a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a>
+          <!--a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a-->
 					<br>
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
           <br>
