--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" type="image/png" href="images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="css/style.css" media="screen" />
 </head>
-<body >
+<body>
   <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -36,7 +36,7 @@
       <div class="container">
         <ul class="navbar-list">
           <li class="navbar-item current"><a class="navbar-link" href="index.html">Home</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Online Quiz</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Astronomy Quiz</a></li>
           <li class="navbar-item"><a class="navbar-link" href="download.html">Download</a></li>
           <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
           <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact Us</a></li>
@@ -53,11 +53,7 @@
 Registrations now open<br><br>
 <a target="_" class="button button-primary" href="https://quiz.aryabhat.org">Astro Quiz</a-->
       </p>
-      <p>
-<b>Results for Preliminary Astro Quiz 2021-22 Declared! </b><br>
-Congratulations to all the winners<br><br>
-<a target="_" class="button button-primary" href="files/2021/Result declaration-Prelims-Astro Quiz 2021-22.pdf">Merit List</a>
-      </p-->
+     
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
 		 <h4 align="center">About Aryabhat Foundation</h4>
