--- a/quiz.html
+++ b/quiz.html
@@ -36,7 +36,7 @@
       <div class="container">
         <ul class="navbar-list">
           <li class="navbar-item"><a class="navbar-link" href="index.html">Home</a></li>
-          <li class="navbar-item current"><a class="navbar-link" href="quiz.html">Online Quiz</a></li>
+          <li class="navbar-item current"><a class="navbar-link" href="quiz.html">Astronomy Quiz</a></li>
           <li class="navbar-item"><a class="navbar-link" href="download.html">Download</a></li>
           <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
           <li class="navbar-item"><a class="navbar-link" href="contact.html">Contact Us</a></li>
@@ -61,67 +61,57 @@ We shall not be able to send them by any other means.</p>
 
       <h2>Details of the Quiz</h2>
       <h3> The Organisation :</h3>
-      <p>Aryabhat Foundation is a special endeavor for promotion of Astronomy and Basic Science. The movement had started in 1995, which has now taken a shape of a duly registered social service organisation. Backed by a group of people dedicated to their duties towards the society, the organisation is committed to make learning Basic Science more enjoyable for the youngsters, thus urging them to develop a science based temperament.</p>
+      <p>Aryabhat Foundation is a dedicated endeavor for promotion of Astronomy and Basic Science. The movement had started in 1995, which took shape of a duly registered social service organisation. Backed by a group of people dedicated to their duties towards the society, the organisation is committed to make learning Basic Science more enjoyable for the youngsters, thus urging them to develop a science-based temperament.</p>
       <h3>The Program :</h3>
-      <p>Astronomy is not only a constructive hobby for the children but can also prove to be a pathway to bright future for youngsters aspiring of a challenging career in space technology.</p>
-      <p>The Astronomy Quiz is aimed at developing the interest of the school students in this field through practical exposure. The quiz is a two-tier competition consisting of a preliminary test followed by practical test. The preliminary test is a cream separation exercise and shall be conducted online for the current academic year.</p>
-      <p>Selected participants will qualify for the secondary level by merit in the preliminary test. These participants will be given free study kit &amp; training in sky reading, telescope operation and practical Astronomy. The secondary level test shall be held in December, for those qualifying in the preliminary level. This test is meant to examine the ability of the participants in practical Astronomy.</p>
-      <p>Final winners will be selected on the basis of their overall performance. Contestants will not be paid TA or DA at any stage.</p>
+      <p>Astronomy is not only a constructive hobby for the children but can also prove to be a pathway to a bright future for youngsters aspiring of a challenging career in space technology. </p>
+      <p>The Astronomy Quiz is aimed at developing the interest of the school students in this field through practical exposure. The quiz is a two-tier competition consisting of a preliminary test followed by a practical test. The preliminary test is a cream separation exercise and shall be conducted online for the current academic year.</p>
+      <p>Selected participants will qualify for the secondary level by merit in the preliminary test. These participants will be given a free study kit and will be allotted timeslots for hands on experience of telescope-operation, sky reading and practical Astronomy in evening / night camps at our Bhopal Centre. The lodging-boarding for these participants shall be free. Participants who fail to avail the training opportunity will not be included for the secondary level.</p>
+      <p>The secondary level test shall be held in December, for those qualifying in the preliminary level. This test is meant to examine the ability of the participants in practical Astronomy. Final winners will be selected based on their overall performance. Contestants will not be paid TA or DA at any stage.</p>
 
       <h3>Eligibility :</h3>
-      <p>Students from class 6 to class 9 (both inclusive) from any school situated in Madhya Pradesh are eligible to take part in the quiz.</p>
+      <p>Students from class 6 to class 9 (both inclusive) from any school situated in Madhya Pradesh are eligible to take part in the quiz. Students availing home-schooling in the given class range and permanently residing in Madhya Pradesh are also eligible.</p>
 
       <h3>Entry Fee :</h3>
       <p>Waived for all participants.</p>
 
-      <h3>Online Preliminary Test :</h3>
-      <p>The Astronomy Quiz consists of questions on basic Astronomy &amp; Space Science, which
-shall be a part of general awareness for a school student.</p>
-      <p>Preliminary test consists of 20 objective type questions for each participant, to be
-attempted in 180 seconds. Five marks will be awarded for a correct answer and two marks
-will be deducted for wrong one. Score will appear on-screen upon finishing the test.
-Preliminary test shall be attempted online on the date and time on any Mobile, Laptop or
-Desktop Computer. The Preliminary Test may also be conducted at our test centres for
-participants unable to attempt the Quiz online for some valid reason. </p>
-
-      <h3>The Prizes :</h3>
-      <p>The final-winners of the quiz shall visit the observatory of their choice from those at
-Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners on the basis of overall merit and their choice-options. The trips to Observatories shall proceed in next summers.</p>
-
-      <h3>How to prepare :</h3>
-      <p>The questions in the quiz are based on Astronomy, Space & related science. Participants
-must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy.
-Senior students of Aryabhat have compiled specific Study Material and Demo Quiz which will
-be available to all the participants on post login screen. Registered participants can also seek
-guidance on Telegram Helpline @AstroQuiz / 9425631310. </p>
-
+      <h3>Preliminary Test :</h3>
+      <p>The Astronomy Quiz consists of questions on basic Astronomy & Space Science, which shall be a part of general awareness for a school student.</p>
+      <p>Preliminary test consists of 20 objective type questions for each participant, to be attempted in 180 seconds. Five marks will be awarded for a correct answer and two marks will be deducted for wrong one. Score will appear on-screen as soon as any participant  finishes the test. </p>
+      <p>Preliminary test will be available online on the allotted date and time on any Mobile, Laptop or Desktop Computer. Preliminary Test can also be conducted on the local computers for institutions that opt to do so. In addition, Aryabhat would also conduct the Preliminary Test at common test centres where participants unable to attempt the Quiz online can take part.</p>
+      
       <h3>How to participate :</h3>
-      <p>Interested students shall register for the Quiz on the Portal given on our website, using a
-mobile number and email ID. The schedule of the online Quiz will be as under :</p>
+      <p>Interested students shall register for the Quiz on the Portal given on our website, using a mobile number and email ID. Institutions can also send us bulk entries in soft data. The schedule for registration will be as under :-</p>
         <table border="1" style="border-collapse: collapse;margin-left: auto;margin-right: auto;">
             <tr>
-                <td style="padding:12px;color:#ddd;">Online Registration</td>
-                <td style="padding:12px;color:#fff;"><b>5th Oct to 15 Oct 2021</b></td>
-            </tr>
-            <tr>
-                <td style="padding:12px;color:#ddd;">Intimation of <br> Quiz-slots to registered participants</td>
-                <td style="padding:12px;color:#fff;"><b>15 Oct to 20 Oct 2021</b></td>
+                <td style="padding:12px;color:#ddd;">Institutional Registration</td>
+                <td style="padding:12px;color:#fff;"><b>1st April to 15th June 2022</b></td>
+            </tr><tr>
+                <td style="padding:12px;color:#ddd;">Individual Registration</td>
+                <td style="padding:12px;color:#fff;"><b>20th June to 25th July 2022</b></td>
             </tr>
             <tr>
                 <td style="padding:12px;color:#ddd;">Attempting of Online Quiz</td>
-                <td style="padding:12px;color:#fff;"><b>20 Oct to 30 Oct 2021</b></td>
+                <td style="padding:12px;color:#fff;"><b>1st August to 20th August 2022</b></td>
+            </tr>
+            <tr>
+                <td style="padding:12px;color:#ddd;">Conducting of Quiz for Institutions / Common Centres</td>
+                <td style="padding:12px;color:#fff;"><b>21st August to 5th September 2022</b></td>
             </tr>
         </table>
       </p>
-      <p>Upon submitting data for registration, the participant will receive an on-screen message
-of confirmation. Aryabhat will scrutinize the data and send further communication on
-registered mobile and email ID only. The registered mobile number will be used as Login-ID
-for the Quiz, hence cannot be changed. Participants can login to access the Demo Quiz and
-Study Material. The date-time slots will be intimated to all the registered participants
-individually by email / message. The participants shall attempt the Quiz on the date-time slots
-allotted to them.</p>
-      <p>Any student facing difficulty in participation, shall contact <b>Aryabhat</b> for help.</p>
+      <p>The individual participants will receive intimation by SMS and eMail upon submitting data for registration. Further notifications will also be sent on registered mobile and email ID. The registered mobile number will be used as Login-ID for the Quiz, hence cannot be changed. Participants can login to access the Demo Quiz and Study Material. The date-time slots will be intimated to all the individually registered participants by email / message. The participants shall attempt the Quiz on the date-time slots allotted to them.</p>
+      <p>For Institutional Registration, schools shall send us the relevant data by email. The data-format will be available on our website from 16th March 2022.</p>
+      <p>As already mentioned, selected participants will receive training in practical astronomy at our Bhopal Centre with free lodging–boarding. </p>
 
+      <h3>How to prepare :</h3>
+      <p>The questions in the quiz are based on Astronomy, Space & related science. Participants must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy. Senior students of Aryabhat have compiled specific Study Material and Demo Quiz which will be available to all the participants on post login screen. Registered participants can also seek guidance on Telegram Helpline @AstroQuiz / 9425631310. </p>
+
+
+      <h3>The Prizes :</h3>
+      <p>The final winners of the quiz shall visit the observatory of their choice from those at Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners based on overall merit and their choice-options. The trips to Observatories shall proceed in next summers.</p>
+
+      <p>We request everyone to convey the information to all schools / institutions and individual students, to bring them under the umbrella of this activity.  We may please be contacted for any clarification.</p>
+<!--
      <h4>Aryabhat Contact information </h4>
 
 		 <p  style="text-align:center;">
@@ -143,7 +133,7 @@ allotted to them.</p>
      <h4>Quiz Coordinator</h4>
 
      <p style="text-align:center;">Alok Mandavgane  +91 8225855428</p>
-
+-->
 		 </div>
 
     </div>
