--- a/news.html
+++ b/news.html
@@ -36,7 +36,7 @@
       <div class="container">
         <ul class="navbar-list">
           <li class="navbar-item"><a class="navbar-link" href="index.html">Home</a></li>
-          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Online Quiz</a></li>
+          <li class="navbar-item"><a class="navbar-link" href="quiz.html">Astronomy Quiz</a></li>
           <li class="navbar-item"><a class="navbar-link" href="download.html">Download</a></li>
           <li class="navbar-item"><a class="navbar-link" href="photos.html">Photos</a></li>
           <li class="navbar-item current"><a class="navbar-link" href="news.html">News</a></li>
