--- a/participation.html
+++ b/participation.html
@@ -26,7 +26,7 @@ ga('send', 'pageview');
 			<div class="content">
 				<ul id="menu">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="quiz.html">Quiz</a></li>
+					<li><a href="quiz.html">Astronomy Quiz</a></li>
 					<li><a href="download.html">Download</a></li>
 					<li><a href="photos.html">Photos</a></li>
 					<li><a href="news.html">News</a></li>
