--- a/download.html
+++ b/download.html
@@ -70,6 +70,15 @@
           <a class="button button-primary" target="_blank" href="files/Volunteer_application.pdf">Volunteer Application Form</a>
         </td>
       </tr>
+      tr>
+        <td>
+          Forms for Astro Quiz
+        </td>
+        <td>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/BulkForm.csv">Form for filling students entries in bulk</a>
+        </td>
+      </tr>
 		</table>
 		
 		 </div>
