download form name change

--- a/download.html
+++ b/download.html
@@ -76,7 +76,7 @@
         </td>
         <td>
           <br>
-          <a class="button button-primary" target="_blank" href="files/BulkForm.csv">Form for filling students entries in bulk</a>
+          <a class="button button-primary" target="_blank" href="files/BulkForm.csv">Application form for Institutions</a>
         </td>
       </tr>
 		</table>
