added jnv circular

--- a/download.html
+++ b/download.html
@@ -62,6 +62,16 @@
       </tr>
       <tr>
         <td>
+          Circulars
+        </td>
+        <td>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/2022/JNV_Circular.pdf">JNV Circular</a>
+          <br>
+        </td>
+      </tr>
+      <tr>
+        <td>
           Others
         </td>
         <td>
