added back study material

--- a/download.html
+++ b/download.html
@@ -62,6 +62,22 @@
       </tr>
       <tr>
         <td>
+          Study Material
+        </td>
+        <td>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/Study_material_1.pdf">Study Material 1</a>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/Study_material_2.pdf">Study Material 2</a>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/Study_material_3.pdf">Study Material 3</a>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/Glossary.pdf">Glossary</a>
+          <br>
+        </td>
+      </tr>
+      <tr>
+        <td>
           Circulars
         </td>
         <td>
