--- a/download.html
+++ b/download.html
@@ -57,7 +57,9 @@
 					<br>
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
           <br>
-          <a class="button button-primary" target="_blank" href="files/Circular_AstroQuiz_2022-23.pdf">Circular Astro Quiz 2022-23</a>
+          <a class="button button-primary" target="_blank" href="files/Circular_AstroQuiz_2022-23.pdf">Circular Astro Quiz 2022-23</a>             
+          <br>     
+           <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
         </td>
       </tr>
       <tr>
