result declaration announcement

--- a/index.html
+++ b/index.html
@@ -48,9 +48,14 @@
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h4>Notices</h4>
       <p>
-<big><b> Astro Quiz 2022-23 is almost here!! <br>
-<a target="_" href="files/Circular_AstroQuiz_2022-23.pdf">Circular for Quiz</a></b>
+<big><b> Aryabhat Astronomy Quiz 2022-23
+Result Declaration </b><br>
 </big>
+<p>We have completed conducting the preliminary level of Aryabhat Astronomy Quiz 2022-23 at various schools of the state. We feel pleasure to inform you that Dr Arvind Ranade, Senior Scientist & Executive Director of the Indian National Science Academy shall press the button to process the Merit List of astro-aspirants qualifying for the Secondary Level of the Quiz.
+
+It has been decided to hold the Press-of-Button ceremony on Sunday the 25th Sep 2022, which also marks the birthday of legendary Space Scientist Professor Satish Dhawan.  Dr Ranade will press the button at 5:00 pm and the online coverage of this event shall be available on YouTube.
+
+We solicit everyone to join the ceremony.</p>
 <br>
       </p>
      
