prelims result declared

--- a/index.html
+++ b/index.html
@@ -47,17 +47,14 @@
    <div class="main row">
     <div class="four columns" style="display: flex; flex-direction: column; align-items: center;">
       <h4>Notices</h4>
-      <p>
-<big><b> Aryabhat Astronomy Quiz 2022-23
-Result Declaration </b><br>
-</big>
-<p>We have completed conducting the preliminary level of Aryabhat Astronomy Quiz 2022-23 at various schools of the state. We feel pleasure to inform you that Dr Arvind Ranade, Senior Scientist & Executive Director of the Indian National Science Academy shall press the button to process the Merit List of astro-aspirants qualifying for the Secondary Level of the Quiz.
 
-It has been decided to hold the Press-of-Button ceremony on Sunday the 25th Sep 2022, which also marks the birthday of legendary Space Scientist Professor Satish Dhawan.  Dr Ranade will press the button at 5:00 pm and the online coverage of this event shall be available on YouTube.
-
-We solicit everyone to join the ceremony.</p>
-<br>
+  <p>
+<b>Results for Preliminary phase of Astro Quiz 2022-23 Declared! </b><br>
+Congratulations to all the winners. <br><br>
+<a target="_" class="button button-primary" href="files/2022/Merit_2022.pdf">Merit List</a>
+<a target="_" class="button button-primary" href="files/2022/Summ_2022.pdf">Summary</a>
       </p>
+<br>
      
     </div>
 		<div class="eight columns" style="display: flex; flex-direction: column; align-items: center;">
