--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
       <h4>Notices</h4>
 
   <p>
-<b>Results for Preliminary phase of Astro Quiz 2022-23 Declared! </b><br>
+<b>Results for Astro Quiz 2022-23 Declared! </b><br>
 Congratulations to all the winners. <br><br>
-<a target="_" class="button button-primary" href="files/2022/Merit_2022.pdf">Merit List</a>
-<a target="_" class="button button-primary" href="files/2022/Summ_2022.pdf">Summary</a>
+<a target="_" class="button button-primary" href="files/2022/StateLevelWinners.pdf">Final Merit List</a>
       </p>
 <br>
      
