updated quiz page

--- a/quiz.html
+++ b/quiz.html
@@ -60,13 +60,14 @@ We shall not be able to send them by any other means.</p>
 		<div class="six column" >
 
       <h2>Details of the Quiz</h2>
+      <p>We are glad to announce the Aryabhat Astronomy Quiz for the academic year 2023-24. The program has stepped into 28th successive year. The details of this activity are described hereunder :- </p>
       <h3> The Organisation :</h3>
-      <p>Aryabhat Foundation is a dedicated endeavor for promotion of Astronomy and Basic Science. The movement had started in 1995, which took shape of a duly registered social service organisation. Backed by a group of people dedicated to their duties towards the society, the organisation is committed to make learning Basic Science more enjoyable for the youngsters, thus urging them to develop a science-based temperament.</p>
+      <p>Aryabhat Foundation is a dedicated endeavor for promotion of Astronomy and Basic Science. The movement had started in 1995, which took shape of a duly registered social service organisation. Backed by a group of people dedicated to their duties towards the society, the organisation is committed to make learning Basic Science enjoyable for youngsters, thus inculcating a science-based temperament in them.</p>
       <h3>The Program :</h3>
       <p>Astronomy is not only a constructive hobby for the children but can also prove to be a pathway to a bright future for youngsters aspiring of a challenging career in space technology. </p>
-      <p>The Astronomy Quiz is aimed at developing the interest of the school students in this field through practical exposure. The quiz is a two-tier competition consisting of a preliminary test followed by a practical test. The preliminary test is a cream separation exercise and shall be conducted online for the current academic year.</p>
-      <p>Selected participants will qualify for the secondary level by merit in the preliminary test. These participants will be given a free study kit and will be allotted timeslots for hands on experience of telescope-operation, sky reading and practical Astronomy in evening / night camps at our Bhopal Centre. The lodging-boarding for these participants shall be free. Participants who fail to avail the training opportunity will not be included for the secondary level.</p>
-      <p>The secondary level test shall be held in December, for those qualifying in the preliminary level. This test is meant to examine the ability of the participants in practical Astronomy. Final winners will be selected based on their overall performance. Contestants will not be paid TA or DA at any stage.</p>
+      <p>The Astronomy Quiz is aimed at developing the interest of the school students in this field through practical exposure. The quiz is a two-tier competition consisting of a preliminary test followed by a practical test. The preliminary test is a cream separation exercise and shall be conducted on digital platform.</p>
+      <p>Selected participants will qualify for the secondary level by merit in the preliminary test. These participants will be given a free study kit and will be allotted timeslots for hands-on experience of telescope-operation, sky reading and practical Astronomy in evening / night camps at our Bhopal Centre. The lodging-boarding for these participants shall be free. Participants who fail to avail the training opportunity will not be included for the secondary level.</p>
+      <p>The secondary level test shall be held in December, for those qualifying in the preliminary level. This test is meant to examine the ability of the participants in practical Astronomy. Final winners will be selected based on their overall performance. Contestants will not be paid Travel Expenses or DA at any stage.</p>
 
       <h3>Eligibility :</h3>
       <p>Students from class 6 to class 9 (both inclusive) from any school situated in Madhya Pradesh are eligible to take part in the quiz. Students availing home-schooling in the given class range and permanently residing in Madhya Pradesh are also eligible.</p>
@@ -75,8 +76,8 @@ We shall not be able to send them by any other means.</p>
       <p>Waived for all participants.</p>
 
       <h3>Preliminary Test :</h3>
-      <p>The Astronomy Quiz consists of questions on basic Astronomy & Space Science, which shall be a part of general awareness for a school student.</p>
-      <p>Preliminary test consists of 20 objective type questions for each participant, to be attempted in 180 seconds. Five marks will be awarded for a correct answer and two marks will be deducted for wrong one. Score will appear on-screen as soon as any participant  finishes the test. </p>
+      <p>The Astronomy Quiz consists of questions on basic Astronomy & Space Science, which shall be a part of general awareness for a school student. </p>
+      <p>Preliminary test consists of 20 objective type questions for each participant, to be attempted in 180 seconds. A correct answer will fetch five marks and two marks will be deducted for wrong one. Score will appear on-screen as soon as any participant  finishes the test.  </p>
       <p>Preliminary test will be available online on the allotted date and time on any Mobile, Laptop or Desktop Computer. Preliminary Test can also be conducted on the local computers for institutions that opt to do so. In addition, Aryabhat would also conduct the Preliminary Test at common test centres where participants unable to attempt the Quiz online can take part.</p>
       
       <h3>How to participate :</h3>
@@ -84,33 +85,32 @@ We shall not be able to send them by any other means.</p>
         <table border="1" style="border-collapse: collapse;margin-left: auto;margin-right: auto;">
             <tr>
                 <td style="padding:12px;color:#ddd;">Institutional Registration</td>
-                <td style="padding:12px;color:#fff;"><b>1st April to 15th June 2022</b></td>
+                <td style="padding:12px;color:#fff;"><b>1st April to 15th June 2023</b></td>
             </tr><tr>
                 <td style="padding:12px;color:#ddd;">Individual Registration</td>
-                <td style="padding:12px;color:#fff;"><b>20th June to 25th July 2022</b></td>
+                <td style="padding:12px;color:#fff;"><b>20th June to 25th July 2023</b></td>
             </tr>
             <tr>
                 <td style="padding:12px;color:#ddd;">Attempting of Online Quiz</td>
-                <td style="padding:12px;color:#fff;"><b>1st August to 20th August 2022</b></td>
+                <td style="padding:12px;color:#fff;"><b>1st August to 6th August 2023</b></td>
             </tr>
             <tr>
                 <td style="padding:12px;color:#ddd;">Conducting of Quiz for Institutions / Common Centres</td>
-                <td style="padding:12px;color:#fff;"><b>21st August to 5th September 2022</b></td>
+                <td style="padding:12px;color:#fff;"><b>7th August to 3rd September 2023</b></td>
             </tr>
         </table>
       </p>
-      <p>The individual participants will receive intimation by SMS and eMail upon submitting data for registration. Further notifications will also be sent on registered mobile and email ID. The registered mobile number will be used as Login-ID for the Quiz, hence cannot be changed. Participants can login to access the Demo Quiz and Study Material. The date-time slots will be intimated to all the individually registered participants by email / message. The participants shall attempt the Quiz on the date-time slots allotted to them.</p>
-      <p>For Institutional Registration, schools shall send us the relevant data by email. The data-format will be available on our website from 16th March 2022.</p>
-      <p>As already mentioned, selected participants will receive training in practical astronomy at our Bhopal Centre with free lodging–boarding. </p>
+      <p>The individual participants will receive intimation by SMS and eMail upon submitting data for registration. Further notifications will also be sent on registered mobile and email ID. The registered mobile number will be used as Login-ID for the Quiz, hence cannot be changed. Participants can login to access the Demo Quiz and Study Material. The date-time slots will be intimated to the participants individually by email / message or through the school. The participants shall attempt the Quiz on the date-time slots allotted to them. For Institutional Registration, schools shall send us the relevant data by email. The data-format is available on our website. </p>
+      <p>As already mentioned, selected participants will receive training in practical astronomy at our Bhopal Centre with free lodging–boarding.  </p>
 
       <h3>How to prepare :</h3>
-      <p>The questions in the quiz are based on Astronomy, Space & related science. Participants must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy. Senior students of Aryabhat have compiled specific Study Material and Demo Quiz which will be available to all the participants on post login screen. Registered participants can also seek guidance on Telegram Helpline @AstroQuiz / 9425631310. </p>
+      <p>The questions in the quiz are based on Astronomy, Space & related science. Participants must acquire a good knowledge of the Solar System, Deep Sky Objects & General Astronomy. Senior students of Aryabhat have compiled specific Study Material and Demo Quiz which will be available to all the participants on post login screen. Registered participants can also seek guidance on WhatsApp / Telegram Helpline @AstroQuiz / 9425631310. </p>
 
 
       <h3>The Prizes :</h3>
       <p>The final winners of the quiz shall visit the observatory of their choice from those at Dongla, Kavalur, Kodaikanal, Nainital and Udaipur & Mount Abu in small groups. Observatories will be allotted to winners based on overall merit and their choice-options. The trips to Observatories shall proceed in next summers.</p>
 
-      <p>We request everyone to convey the information to all schools / institutions and individual students, to bring them under the umbrella of this activity.  We may please be contacted for any clarification.</p>
+      <p>We invite eligible students and institutions to participate in this activity. For any clarification, we may be contacted by email or voice-call.</p>
 <!--
      <h4>Aryabhat Contact information </h4>
 
