added institutional Registration files

--- a/download.html
+++ b/download.html
@@ -78,6 +78,18 @@
           <br>
         </td>
       </tr>
+      tr>
+        <td>
+          Institutional Registration
+        </td>
+        <td>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/2023/Fwd_Letter.pdf">Letter for Forwarding Institution Details </a>
+          <br>
+          <a class="button button-primary" target="_blank" href="files/2023/Institutional_Format.xls">Student Detail Entry Format </a>
+          <br>
+        </td>
+      </tr>
       <tr>
         <td>
           Circulars
