removed old sections

--- a/index.html
+++ b/index.html
@@ -49,10 +49,8 @@
       <h4>Notices</h4>
 
   <p>
-<b>Results for Astro Quiz 2022-23 Declared! </b><br>
-Congratulations to all the winners. <br><br>
-<a target="_" class="button button-primary" href="files/2022/StateLevelWinners.pdf">Final Merit List</a>
-      </p>
+<b><a href="quiz.html">Astro Quiz 2023-24 is here! </a> </b><br>
+</p>
 <br>
      
     </div>
