--- a/download.html
+++ b/download.html
@@ -68,13 +68,13 @@
         </td>
         <td>
           <br>
-          <a class="button button-primary" target="_blank" href="files/Study1.pdf">Study Material 1</a>
+          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study1.pdf">Study Material 1</a>
           <br>
-          <a class="button button-primary" target="_blank" href="files/Study2.pdf">Study Material 2</a>
+          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study2.pdf">Study Material 2</a>
           <br>
-          <a class="button button-primary" target="_blank" href="files/Study3.pdf">Study Material 3</a>
+          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study3.pdf">Study Material 3</a>
           <br>
-          <a class="button button-primary" target="_blank" href="files/Glossary.pdf">Glossary</a>
+          <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
           <br>
         </td>
       </tr>
