added circular and extension

--- a/download.html
+++ b/download.html
@@ -56,10 +56,12 @@
           <!--a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a-->
 					<br>
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
-          <br>
-          <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24.pdf">Circular Astro Quiz 2023-24</a>             
-          <br>     
            <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
+          <hr>
+          <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24.pdf">Circular Astro Quiz 2023-24</a>       
+          <br>
+          <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24 Extension.pdf">Extension of Circular</a>             
+          <hr>     
         </td>
       </tr>
       <tr>
@@ -69,13 +71,13 @@
         <td>
           <br>
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study1.pdf">Study Material 1</a>
-          <br>
+
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study2.pdf">Study Material 2</a>
-          <br>
+
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Study3.pdf">Study Material 3</a>
-          <br>
+   
           <a class="button button-primary" target="_blank" href="https://docs.google.com/viewerng/viewer?url=http://aryabhat.org/files/Glossary.pdf">Glossary</a>
-          <br>
+
         </td>
       </tr>
       <tr>
