--- a/quiz.html
+++ b/quiz.html
@@ -85,10 +85,10 @@ We shall not be able to send them by any other means.</p>
         <table border="1" style="border-collapse: collapse;margin-left: auto;margin-right: auto;">
             <tr>
                 <td style="padding:12px;color:#ddd;">Institutional Registration</td>
-                <td style="padding:12px;color:#fff;"><b>1st April to 15th June 2023</b></td>
+                <td style="padding:12px;color:#fff;"><b>1st April to 31 July 2023</b></td>
             </tr><tr>
                 <td style="padding:12px;color:#ddd;">Individual Registration</td>
-                <td style="padding:12px;color:#fff;"><b>20th June to 25th July 2023</b></td>
+                <td style="padding:12px;color:#fff;"><b>20th June to 31 July 2023</b></td>
             </tr>
             <tr>
                 <td style="padding:12px;color:#ddd;">Attempting of Online Quiz</td>
