Organized download page better

--- a/download.html
+++ b/download.html
@@ -54,12 +54,11 @@
         </td>
         <td>
           <!--a class="button button-primary" target="_blank" href="files/2021/AstroQuiz2021-22.pdf">Astronomy Quiz Details</a-->
-					<br>
+
           <a class="button button-primary" target="_blank" href="files/Offered Activities.pdf">Offered Activities</a>
            <a class="button button-primary" target="_blank" href="https://aryabhat.org/qintro">Quiz Introduction Video</a>
           <hr>
-          <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24.pdf">Circular Astro Quiz 2023-24</a>       
-          <br>
+          <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24.pdf">Circular Astro Quiz 2023-24</a> 
           <a class="button button-primary" target="_blank" href="files/2023/Circular_AstroQuiz_2023-24 Extension.pdf">Extension of Circular</a>             
           <hr>     
         </td>
@@ -85,11 +84,17 @@
           Institutional Registration
         </td>
         <td>
+          <hr>
+          ( Section for Schools Only, for individual registration go  
+          <a target="_blank" href="https://quiz.aryabhat.org">here</a> ) 
           <br>
+          <br>
+
           <a class="button button-primary" target="_blank" href="files/2023/Fwd_Letter.pdf">Letter for Forwarding Institution Details </a>
           <br>
-          <a class="button button-primary" target="_blank" href="files/2023/Institutional_Format.xls">Student Detail Entry Format </a>
+          <a class="button button-primary" target="_blank" href="files/2023/Institutional_Format.xls">Format for Institutional Entries </a>
           <br>
+          <hr>
         </td>
       </tr>
       <tr>
@@ -97,9 +102,7 @@
           Circulars
         </td>
         <td>
-          <br>
           <a class="button button-primary" target="_blank" href="files/2022/JNV_Circular.pdf">JNV Circular</a>
-          <br>
         </td>
       </tr>
       <tr>
@@ -108,7 +111,7 @@
         </td>
         <td>
           <a class="button button-primary" target="_blank" href="files/Become_a_volunteer.pdf">Become a Volunteer</a>
-          <br>
+
           <a class="button button-primary" target="_blank" href="files/Volunteer_application.pdf">Volunteer Application Form</a>
         </td>
       </tr>
