--- a/index.html
+++ b/index.html
@@ -49,7 +49,10 @@
       <h4>Notices</h4>
 
   <p>
-<b><a href="quiz.html">Astro Quiz 2023-24 is here! </a> </b><br>
+<b><a href="quiz.html">Astro Quiz 2023-24 is here! </a> </b>
+</p>
+<p>
+<b><a href="https://quiz.aryabhat.org"> Link  </a> </b>for Individual Registration<br>
 </p>
 <br>
      
