--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <b><a href="quiz.html">Astro Quiz 2023-24 is here! </a> </b>
 </p>
 <p>
-<b><a href="https://quiz.aryabhat.org"> Link  </a> </b>for Individual Registration<br>
+<b><a href="https://quiz.aryabhat.org"> <img src="files/2023/qr-code.png"/> <br> Individual Registration </a> </b><br>
 </p>
 <br>
      
