added dpi circular

--- a/download.html
+++ b/download.html
@@ -103,6 +103,8 @@
         </td>
         <td>
           <a class="button button-primary" target="_blank" href="files/2023/Circular_JNV.pdf">JNV Circular</a>
+          <a class="button button-primary" target="_blank" href="files/2023/DPI_Circular.pdf">DPI Circular</a>
+          <!--a class="button button-primary" target="_blank" href="files/2023/KV_Circular.pdf">KV Circular</a-->
         </td>
       </tr>
       <tr>
