--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
   <p>
 <b><a href="quiz.html">Astro Quiz 2023-24 is here! </a> </b>
 </p>
+
+
+  <p align="center">
+<b><a href="https://quiz.aryabhat.org">Click here to login to Online Astronomy Quiz </a> </b>
+</p>
 <br>
      
     </div>
